# echowall

./: BLACKPAPER_v6.0-draft.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  INTEGRATIONS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  UPGRADE_REPORT_2026-05-29.md  install.sh  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: sovereign-bug-report---feature-request.md
.github/workflows/: build.yml  esp32-build.yml  generate-dataset.yml  khawrizm-os-build.yml  test.yml
apps/ios/EchoWallCompanion/: ContentView.swift  LocalRadarClient.swift  README-IOS.md  RadarState.swift
casper_engine/: Makefile  README.md
casper_engine/src/: casper_api.c  sarf.c  sarf.h  tensor.c  tensor.h
cometx-hybrid/: package.json
cometx-hybrid/electron/: main.js  preload.js  session-manager.js
cometx-hybrid/ui/: agent-beam.css  shell.html  shell.js
custom_components/echowall/: __init__.py  sensor.py
docs/: ARABIC_SDK.md  BLACKPAPER_v7.0_PHALANX_ECHOWALL_ARCHITECTURE.md  HARDWARE.md  HOW_IT_WORKS.md  MODEL_CARD.md  PRIVACY.md  REFERENCES.md  ROADMAP_v0.3.0.md  SETUP.md  SHOWCASE.md  THEORY.md
echowall/: __init__.py  cli.py  config.py  model_loader.py  setup_wizard.py
echowall/api/: server.py
echowall/core/: __init__.py  calibration.py  pipeline.py
echowall/core/csi/: capture.py
echowall/core/fusion/: fuser.py
echowall/integrations/: __init__.py  homeassistant.py
echowall/integrations/hacs/: __init__.py  config_flow.py  manifest.json  sensor.py
echowall/models/echonet/: model.py
echowall/privacy/: jitter.py
echowall/sdk/: __init__.py  client.py  events.py  node_discovery.py  rules.py
echowall/sim/: environment.py
firmware/esp32-s3/: README.md
firmware/esp32-s3/components/fl_mesh/: CMakeLists.txt  fl_mesh.c  fl_mesh.h
firmware/esp32-s3/main/: CMakeLists.txt  config.h  csi_extractor.h  echowall_main.c  main.c  serial_reporter.h
khawrizm_os/: build_iso.sh
khawrizm_os/boot/: README.md  verified_boot.c
khawrizm_os/bsp/: README.md  rk3588_dma.c  se051_i2c.c
khawrizm_os/kernel/: Makefile  microkernel.c  rv32ima.c  rv32ima.h
models/: tinyml_posture_tracker.py
niyah_engine/: Cargo.toml
niyah_engine/benches/: phalanx_bench.rs
niyah_engine/cognitive_lobe/: Cargo.toml  build.rs
niyah_engine/cognitive_lobe/src/: casper_bridge.rs  lib.rs  memory.rs  sarf.rs
niyah_engine/executive_lobe/: Cargo.toml
niyah_engine/executive_lobe/src/: lib.rs
niyah_engine/halluzig/: Cargo.toml  README.md
niyah_engine/halluzig/src/: gpu_accel.rs  lib.rs
niyah_engine/phalanx_gate/: Cargo.toml
niyah_engine/phalanx_gate/src/: lib.rs  profiler.rs  ssv.rs
niyah_engine/sensory_lobe/: Cargo.toml
niyah_engine/sensory_lobe/src/: dma.rs  fusion.rs  lib.rs  sidsense.rs
niyah_engine/tests/: integration_test.rs
niyah_executive/: __init__.py  pyproject.toml  requirements.txt
niyah_executive/agents/: __init__.py  activation_inspector.py  integrity_gate.py  static_auditor.py  tarpit_controller.py
niyah_executive/supervisor/: graph.py  state.py
scripts/: generate_csi_dataset.py
tests/: test_api.py  test_benchmark.py  test_csi.py  test_fusion.py
tests/data/: sample_csi_fall.csv  sample_csi_fall.meta.json
