[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "echowall"
version = "0.1.0"
description = "See through walls using Wi-Fi CSI + Acoustic fusion — open-source passive radar"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ECHOWALL Contributors" }]
keywords = ["wifi", "csi", "radar", "passive-radar", "presence-detection", "through-wall", "federated-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "torch>=2.12.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.47.0",
    "pydantic>=2.6",
    "paho-mqtt>=2.0",
    "rich>=13.7",
    "typer>=0.9",
    "pyserial>=3.5",
]

[project.optional-dependencies]
rpi = ["RPi.GPIO>=0.7.1", "picamera2>=0.3"]
sim = ["matplotlib>=3.8", "plotly>=5.18"]
dev = ["pytest>=8", "ruff>=0.3", "mypy>=1.8"]

[project.scripts]
echowall = "echowall.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
