[workspace]
members = [
    "executive_lobe",
    "phalanx_gate",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Khawrzm <graxtech@outlook.sa>"]
license = "MIT"
repository = "https://github.com/Khawrzm/echowall"

[workspace.dependencies]
# No std dependencies. All crates must be no_std compatible.
heapless = { version = "0.8", default-features = false }
bitflags = { version = "2", default-features = false }
