[workspace]
members = [
    "executive_lobe",
    "phalanx_gate",
    "halluzig",
    "cognitive_lobe",
    "sensory_lobe",
]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "phalanx_bench"
harness = false
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Khawrzm <graxtech@outlook.sa>"]
license = "MIT"
repository = "https://github.com/Khawrzm/echowall"

[workspace.dependencies]
# No std dependencies. All crates must be no_std compatible.
heapless = { version = "0.8", default-features = false }
bitflags = { version = "2", default-features = false }
