[package]
name = "cognitive_lobe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
heapless = { workspace = true }
bitflags = { workspace = true }
phalanx_gate = { path = "../phalanx_gate" }
sensory_lobe = { path = "../sensory_lobe" }

[build-dependencies]
# cc crate: compiles C11 Casper Engine sources and links libcasper.a
# at `cargo build` time. No pre-built library required.
cc = { version = "1", features = [] }

[features]
default = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
