[package]
name = "executive_lobe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
heapless = { workspace = true }
bitflags = { workspace = true }
phalanx_gate = { path = "../phalanx_gate" }

[features]
default = []

[profile.release]
opt-level = "z"   # Minimize binary size for embedded targets
lto = true
codegen-units = 1
panic = "abort"

# Target: ESP32-S3 (xtensa-esp32s3-none-elf) or RPi CM4 (thumbv7em-none-eabihf)
# Build with: cargo build --target xtensa-esp32s3-none-elf --release
